# ticketmaster-vendor

./: .gitignore  README.md  __init__.py  plugin.py  pyproject.toml
.github/workflows/: ci.yaml
fixtures/: empty.json  events.json
mock/business/: scenarios.py
schema/migrations/: __init__.py
tests/: conftest.py  test_business_mock.py  test_contract.py  test_edge.py  test_vendor_mock.py
ticketmaster_plugin/: __init__.py  plugin.py
ticketmaster_plugin/fixtures/: malformed.json  tickets.json
ticketmaster_plugin/mock/business/: scenarios.py  server.py
