[build-system]
requires = ["setuptools>=75.6"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketmaster-plugin"
version = "0.1.0"
description = "TicketMaster vendor plugin — implements Plugin ABC + VendorProxy ABC"
requires-python = ">=3.10"
authors = [{name = "Shawn Lin"}]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-json-report>=1.5",
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
